Closed
Bug 1243706
Opened 10 years ago
Closed 10 years ago
Let PerfMonitoring ride the trains
Categories
(Toolkit :: Performance Monitoring, defect)
Toolkit
Performance Monitoring
Tracking
()
RESOLVED
FIXED
mozilla47
People
(Reporter: Yoric, Assigned: Yoric)
References
Details
Attachments
(1 file)
Let's release the API. We can work on the UX later.
| Assignee | ||
Comment 1•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/33401/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/33401/
Attachment #8716192 -
Flags: review?(felipc)
Updated•10 years ago
|
Attachment #8716192 -
Flags: review?(felipc) → review+
Comment 2•10 years ago
|
||
Comment on attachment 8716192 [details]
MozReview Request: Bug 1243706 - Release PerformanceStats/PerformanceWatcher;r?felipe
https://reviewboard.mozilla.org/r/33401/#review30609
May be worth adding relnote to the bug? Does this need an intent to ship e-mail? I'm guessing no because it isn't exposed to the web
::: browser/components/nsBrowserGlue.js:545
(Diff revision 1)
> if (AppConstants.NIGHTLY_BUILD) {
> - AddonWatcher.init();
> os.addObserver(this, AddonWatcher.TOPIC_SLOW_ADDON_DETECTED, false);
> }
shouldn't this entire `if (NIGHLTY_BUILD)` block be removed as well?
| Assignee | ||
Comment 3•10 years ago
|
||
https://reviewboard.mozilla.org/r/33401/#review30609
I don't think we need an intent to ship, but yes, relnotes is a good idea.
> shouldn't this entire `if (NIGHLTY_BUILD)` block be removed as well?
Actually, the idea is to ship without the annoying yellow bar. That one will only ship when UX has turned it into something usable.
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → dteller
| Assignee | ||
Comment 4•10 years ago
|
||
Release Note Request (optional, but appreciated)
[Why is this notable]: People have been asking for something like about:performance for years.
[Suggested wording]: Power users can now open about:performance to find out what is slowing down their Firefox. The underlying API is open to add-on developers who wish to implement their own performance tracking mechanism.
[Links (documentation, blog post, etc)]: TBD
relnote-firefox:
--- → ?
Comment 5•10 years ago
|
||
Comment on attachment 8716192 [details]
MozReview Request: Bug 1243706 - Release PerformanceStats/PerformanceWatcher;r?felipe
I sent this to Try on top of m-c tip along with the Trunk-as-Aurora simulation patch and the browser-chrome mochitests look angry.
https://treeherder.mozilla.org/logviewer.html#?job_id=16616307&repo=try
TEST-UNEXPECTED-FAIL | browser/components/sessionstore/test/browser_339445.js | A promise chain failed to handle a rejection: - at resource://gre/modules/XPCOMUtils.jsm:230 - TypeError: Cc[aContract] is undefined
TEST-UNEXPECTED-FAIL | browser/components/sessionstore/test/browser_354894_perwindowpb.js | A promise chain failed to handle a rejection: - at resource://gre/modules/AddonWatcher.jsm:74 - ReferenceError: PerformanceWatcher is not defined
etc.
Attachment #8716192 -
Flags: feedback-
| Assignee | ||
Comment 6•10 years ago
|
||
Comment on attachment 8716192 [details]
MozReview Request: Bug 1243706 - Release PerformanceStats/PerformanceWatcher;r?felipe
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/33401/diff/1-2/
Attachment #8716192 -
Flags: feedback-
| Assignee | ||
Comment 7•10 years ago
|
||
Ok, found the issue.
Ryan, do you wish to re-run the Aurora simulation?
Flags: needinfo?(ryanvm)
Comment 9•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Comment 10•10 years ago
|
||
(In reply to David Rajchenbach-Teller [:Yoric] (please use "needinfo") from comment #7)
> Ok, found the issue.
> Ryan, do you wish to re-run the Aurora simulation?
Still broken.
https://treeherder.mozilla.org/logviewer.html#?job_id=16844709&repo=try
Flags: needinfo?(ryanvm) → needinfo?(dteller)
Comment 11•10 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #10)
This was taken care of in bug 1246277.
Flags: needinfo?(dteller)
You need to log in
before you can comment on or make changes to this bug.
Description
•