Bug 1243706 - Release PerformanceStats/PerformanceWatcher;r=Felipe

MozReview-Commit-ID: 4XT21bfBSa9